# meteolibre_dataset

./: .gitignore  Dockerfile  README.md  init.sh  pyproject.toml  requirements.txt  setup.sh
data/: upload_gcp.sh
data/assets/: consensus_full_class_12_france_padded.npz  consensus_full_class_4_france_padded.npz  consensus_full_class_9_france_padded.npz
meteolibre_dataset/: bufr_preprocessing.py
scripts/: README.md  download_all.sh  download_bucket.ipynb  download_groundstation.py  download_h5_files.py  get_bucket_list_files.py  groundstation_npz_writing.py  hf_dataset_creation.py  hf_dataset_resize.py  hf_dataset_visualization.py  hf_generation.sh  index_creation.py  init.sh  preprocess_download.ipynb  preprocess_download_groundstations.ipynb  preprocess_geodiff_data.py  preprocess_geodiff_landcover.py  preprocess_groundstations.py  preprocess_groundstattions.py  visualization_data.ipynb
scripts_eumetsat/: README.md  download_eumetsat.py  init.sh  main_eumetsat.py  nc_to_geotif.py  preprocess_eumetsat.py  requirements.txt
tables/: bufrtabb_11.csv  bufrtabd_11.csv  localtabb_85_12.csv  localtabb_85_14.csv
